@startuml Class Diagram

class relay {
    - pin
    + open()
    + close()
}

class limit_switch {
    - pin
    + get_status()
}

enum valve_status_t
{
    open
    fully_open
    fully_close
    error                
}

class valve {
    + open()
    + close()
    + get_status(): valve_status_t
    + stateToString(): String
}

valve "1" o-- "2" relay
valve "1" o-- "2" limit_switch
valve -r- valve_status_t


@enduml